[project]
name = "storm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.8",
    "scikit-learn>=1.7.0",
    "tavily-python>=0.7.7",
    "wikipedia>=1.4.0",
]
